apps/base/odysseus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odysseus
  labels:
    app: odysseus
spec:
  selector:
    app: odysseus
  ports:
    - name: http
      port: 7000
      targetPort: 7000
