apps/base/odysseus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: odysseus
  labels:
    app: odysseus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`odysseus.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: odysseus
          port: http
  tls:
    secretName: ${CERT_SECRET_INTERNAL}
